# backend/internal/controller/post_new.go
@@ -3,6 +3,7 @@ package controller
 import (
 	"errors"
 	"fmt"
+	"log"
 	"mime/multipart"
 	"myapp/internal/constant"
 	"myapp/internal/usecase"
@@ -14,7 +15,7 @@ import (
 type PostNewReq struct {
 	Title string                `form:"title" binding:"required,max=100" maxLength:"100"`
 	Body  string                `form:"body" binding:"required"`
-	Image *multipart.FileHeader `form:"image"`
+	Image *multipart.FileHeader `form:"image" swaggerignore:"true"`
 }
 
 // New post
@@ -22,7 +23,8 @@ type PostNewReq struct {
 // @Description サインインしているユーザーで、指定されたタイトル、本文の投稿を作成する
 // @Tags posts
 // @Accept json
-// @Param signinPost body controller.PostNewReq true "リクエストパラメータ"
+// @Param signinPost formData controller.PostNewReq true "リクエストパラメータ"
+// @Param image formData file false "画像ファイル"
 // @Success 204
 // @Failure 400 {object} controller.ErrorResponse
 // @Failure 500 {object} controller.ErrorResponse
@@ -35,6 +37,7 @@ func PostNew(ctx *gin.Context, usecase *usecase.PostNewUsecase) {
 	var req PostNewReq
 	err := ctx.ShouldBind(&req)
 	if err != nil {
+		log.Printf("failed to parse request: %v", err)
 		handleError(ctx, http.StatusBadRequest, fmt.Errorf("failed to parse request: %w", err))
 		return
 	}
@@ -46,17 +49,29 @@ func PostNew(ctx *gin.Context, usecase *usecase.PostNewUsecase) {
 	}
 
 	var file multipart.File
+	var contentType string
+	var fileName string
 
 	if req.Image != nil {
+		fileName = req.Image.Filename
 		file, err = req.Image.Open()
+		contentType = req.Image.Header.Get("Content-Type")
+		fmt.Println("image size: ", req.Image.Size)
 		if err != nil {
+			log.Printf("failed to open file: %v", err)
 			handleError(ctx, http.StatusBadRequest, fmt.Errorf("failed to open file: %w", err))
+			return
+		}
+		if contentType == "" {
+			log.Printf("failed to get Content-Type: %v", err)
+			handleError(ctx, http.StatusBadRequest, fmt.Errorf("failed to get Content-Type: %w", err))
 			return
 		}
 	}
 
-	err = usecase.Execute(userID, req.Title, req.Body, file)
+	err = usecase.Execute(userID, req.Title, req.Body, file, fileName, contentType)
 	if err != nil {
+		log.Printf("failed to create post: %v", err)
 		handleError(ctx, http.StatusInternalServerError, err)
 		return
 	}
